2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dependencyobject.h: Fix a crash - the return value of GetResourceBase
	should not be freed, so type it as a const char*.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp|h: AddEntry: no need for this to be virtual, it isn't
	overridden anywhere. Add a parameter to specify if we're being called
	from a ctor, in which case we shouldn't try to access the root object
	(since it hasn't completed construction yet).

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: Playlist construction: always initialize waiting and
	opened fields.

2010-02-09  Sebastien Pouliot  <sebastien@ximian.com>

	* downloader.cpp: Initialized DownloaderRequest.aborted field

2010-02-09  Alan McGovern  <amcgovern@novell.com>

	* xaml.cpp: The namescope needs to be copied to the
	  ResourceDictionary aswell, otherwise olympics fails.

2010-02-09  Jackson Harper  <jackson@ximian.com>

	* dependencyobject.h: Add a getter for the resource base.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* transform.cpp|h: Set object type during construction for a few types
	to ease object tracking.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* debug.cpp: Hash ip -> frame lookups. It makes a *huge* difference.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* template.cpp: There might be a circular ref between the xaml context
	and our parent, so ensure that this link is broken upon shutdown.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* timemanager.cpp: Clear the tick calls upon shutdown too.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* value.cpp: When cloning a DO, we get a reffed DO, so ensure we don't
	leak it.

2010-02-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.cpp: Attach: when setting the toplevel namescope don't leak
	it.

2010-02-08  David Reveman  <davidr@novell.com>

	* effect.h:
	* effect.cpp: Add table based blur filter for better